DES-122: Visible Quiz labels, DES-124: Quiz image correction

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -196,7 +196,7 @@ div.choicedrop {
 	text-decoration:none;
 }
 .q-multi strong,
-.q-slider strong { /* item label (hidden until hover) */
+.q-slider strong { /* item label */
 	display: block;
 	padding: .35em 0 0.4em;
 	font-size: .667em;
@@ -205,22 +205,21 @@ div.choicedrop {
 	text-align: center;
 	color: #FFF;
 	background: #444;
-	opacity: .85;
 	position: absolute;
-	left: -10000px;
 	top: auto;
+	bottom:0;
+	left:0;
 	z-index:2000;
-	width: 1px;
-	height: 1px;
+	width:100%;
+	height:auto;
 	overflow: hidden;
+	opacity: .85;
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=85)"; /*IE8*/
 }
 .q-multi a:hover strong,
-.q-slider a:hover strong { /* show item label on hover */
-	bottom:0;
-	left:0;
-	width:100%;
-	height:auto;
+.q-slider a:hover strong { 
+	opacity: .95;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=95)"; /*IE8*/
 }
 div.checked { /* checkbox overlay for selected item */
 	position:absolute;
